[package]
name = "neil"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
juniper = "0.15"
actix-web-lab = "0.18.9"
actix-web-prom = "0.6.0"
config = "0.13.1"
lazy_static = "1.4.0"
redis = "0.22.2"
log = "0.4"
sysinfo = "0.27.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3